Finally got the game board arrays to push properly....on to the win function.... also changed a few astetics.

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     display: flex;
     background-color:white;
     align-content: center;
-    justify-content: space-between;
+    justify-content: center;
     flex-direction: row;
 }
 .firstrow{
@@ -77,4 +77,14 @@ body {
     height: 75px;
     background-color: red;
     border-radius: 50%;
+}
+.movesTablePlayer2MoveTracker{
+    background-color: black;
+    color: greenyellow;
+    width: 50px;
+}
+.movesTablePlayer1MoveTracker{
+    background-color: black;
+    color: greenyellow;
+    width: 50px;
 }
